Fix double border issue

--- a/resources/css/posts.css
+++ b/resources/css/posts.css
@@ -92,7 +92,7 @@ hr {
     color: LightGrey;
 }
 
-#outline-container-sec- {
+.post-content {
     margin: 70px auto 0;
     padding: 5px 30px;
     max-width: 780px;
